force-app/main/default/objects/ProductScope__c/ProductScope__c.object-meta.xml
<CustomObject>
    <label>Product Scope</label>
    <nameField>
        <displayFormat>PS-{00000}</displayFormat>
        <label>Scope Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Scopes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>