force-app/main/default/objects/ProductScope__c/fields/ContractPosition__c.field-meta.xml
<CustomField>
    <fullName>ContractPosition__c</fullName>
    <description>The refund position whose product scope is refined here.</description>
    <inlineHelpText>The refund position whose product scope is refined here.</inlineHelpText>
    <label>Contract Position</label>
    <referenceTo>ContractPosition__c</referenceTo>
    <relationshipLabel>Product Scopes</relationshipLabel>
    <relationshipName>ProductScopes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>