force-app/main/default/objects/ProductScope__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The included or excluded product or group (any hierarchy level possible).</description>
    <inlineHelpText>The included or excluded product or group (any hierarchy level possible).</inlineHelpText>
    <label>Product / Group</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Scopes</relationshipLabel>
    <relationshipName>ProductScopes</relationshipName>
    <type>Lookup</type>
</CustomField>