force-app/main/default/objects/ProductScope__c/fields/ScopeMode__c.field-meta.xml
<CustomField>
    <fullName>ScopeMode__c</fullName>
    <description>Whether this line extends the scope (include) or restricts it (exclude).</description>
    <inlineHelpText>Whether this line extends the scope (include) or restricts it (exclude).</inlineHelpText>
    <label>Scope Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Include</fullName>
            </value>
            <value>
                <fullName>Exclude</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>