force-app/main/default/objects/ProductScope__c/listViews/All_Product_Scopes.listView-meta.xml
<ListView>
    <fullName>All_Product_Scopes</fullName>
    <columns>NAME</columns>
    <columns>ContractPosition__c</columns>
    <columns>Product__c</columns>
    <columns>ScopeMode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Product Scopes</label>
</ListView>